--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,20 @@ header {
     justify-content: space-between;
     
 }
-
+.heroimg {
+    width: 1000px;
+    padding-top: 30px;
+}
+.button {
+    float: right;
+    background-color: antiquewhite;
+    color: white;
+    padding: 20px 40px 20px 40px;
+    font-size: 20px;
+    margin-bottom: 30px;
+    margin-left: 20px;
+    border-style: none;
+}
 body{
     margin: auto;
     width: 90%;
